# Simple-Snake-Game

./: CMakeLists.txt  README.md
cmake_modules/: FindSFML.cmake
headers/: apple.hpp  engine.hpp  snake.hpp
src/: apple.cpp  draw.cpp  engine.cpp  input.cpp  main.cpp  snake.cpp  update.cpp
